--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,6 @@ body {
 /* Style the dot */
 .dot {
   display: inline-block;
-  width: 6px;
-  height: 6px;
-  margin-top: 500px;
   background-color: rgba(0, 0, 0, 0);
   border-radius: 50%;
   animation: blink 1s infinite; /* Apply the blinking animation */
@@ -28,7 +25,7 @@ body {
 /* Style the container text */
 .blinking-dot {
   font-family: 'Pacifico', cursive; /* Custom font */
-    font-size: 36px;
+    font-size: 14px;
     color: #FF5733; /* Custom text color */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow */
     background-color: #F7DC6F; /* Background color */
@@ -37,13 +34,15 @@ body {
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Box shadow */
     text-align: center;
-    width: 300px;
+    width: 80%;
+	height: 80%;
     margin: 0 auto;
 
 }
 
 
 .letter-image {
+	z-index: 4;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -164,6 +163,7 @@ body {
 }
 
 .shadow {
+	
 	position: absolute;
 	top: 200px;
 	left: 50%;
@@ -202,6 +202,162 @@ body {
 		}
 		
 		.shadow {
-			width: 250px;
+			width: 150px;
 		}
 	}
+	/* CSS */
+.button-53 {
+	z-index: 4;
+	background-color: #3DD1E7;
+	border: 0 solid #E5E7EB;
+	box-sizing: border-box;
+	color: #000000;
+	display: flex;
+	font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+	font-size: 1rem;
+	font-weight: 700;
+	justify-content: center;
+	line-height: 1.75rem;
+	padding: .75rem 1.65rem;
+	position: relative;
+	text-align: center;
+	text-decoration: none #000000 solid;
+	text-decoration-thickness: auto;
+	width: 100%;
+	max-width: 260px;
+	position: relative;
+	cursor: pointer;
+	transform: rotate(-2deg);
+	user-select: none;
+	margin-left: 40%;
+	margin-top: 10%;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+  }
+  
+  .button-53:focus {
+	outline: 0;
+  }
+  
+  .button-53:after {
+	content: '';
+	position: absolute;
+	border: 1px solid #000000;
+	bottom: 4px;
+	left: 4px;
+	width: calc(100% - 1px);
+	height: calc(100% - 1px);
+  }
+  
+  .button-53:hover:after {
+	bottom: 2px;
+	left: 2px;
+  }
+  
+  @media (min-width: 768px) {
+	.button-53 {
+	  padding: .75rem 3rem;
+	  font-size: 1.25rem;
+	}
+  }
+	
+
+  
+@keyframes move-background {
+	from {
+		  -webkit-transform: translate3d(0px, 0px, 0px);
+	  }
+	  to { 
+		  -webkit-transform: translate3d(1000px, 0px, 0px);
+	  }
+  }
+  @-webkit-keyframes move-background {
+	from {
+		  -webkit-transform: translate3d(0px, 0px, 0px);
+	  }
+	  to { 
+		  -webkit-transform: translate3d(1000px, 0px, 0px);
+	  }
+  }
+  
+  @-moz-keyframes move-background {    
+	  from {
+		  -webkit-transform: translate3d(0px, 0px, 0px);
+	  }
+	  to { 
+		  -webkit-transform: translate3d(1000px, 0px, 0px);
+	  }
+  }
+  
+	  @-webkit-keyframes move-background {
+	  from {
+		  -webkit-transform: translate3d(0px, 0px, 0px);
+	  }
+	  to { 
+		  -webkit-transform: translate3d(1000px, 0px, 0px);
+	  }
+  }
+  
+  .background-container{
+	  position: fixed;
+	  top: 0;
+	  left:0;
+	  bottom: 0;
+	  right: 0;
+  }
+  
+  .stars {
+   background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
+   position: absolute;
+	  top: 0;
+	  bottom: 0;
+	  left: 0;
+	  right: 0;
+	  display: block;
+		z-index: 0;
+  }
+  
+  .twinkling{
+	  width:10000px;
+	  height: 100%;
+	  background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/twinkling.png") repeat;
+	  background-size: 1000px 1000px;
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	  bottom: 0;
+	  z-index: 2;
+	  
+	  -moz-animation:move-background 70s linear infinite;
+	-ms-animation:move-background 70s linear infinite;
+	-o-animation:move-background 70s linear infinite;
+	-webkit-animation:move-background 70s linear infinite;
+	animation:move-background 70s linear infinite;
+	  
+  }
+  
+  .clouds{
+	  width:10000px;
+	  height: 100%;
+	  background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
+	  background-size: 1000px 1000px;
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	  bottom: 0;
+	  z-index: 3;
+  
+	 -moz-animation:move-background 150s linear infinite;
+	-ms-animation:move-background 150s linear infinite;
+	-o-animation:move-background 150s linear infinite;
+	-webkit-animation:move-background 150s linear infinite;
+	animation:move-background 150s linear infinite;
+  }
+  img{
+	height: 70vh;
+	width:70vh;
+	position: absolute;
+	z-index: 3;
+	right: 20px;
+  }
+  
