modified:   css/style.css 	modified:   css/styles.css 	modified:   css/styless.css 	new file:   desktop.js 	modified:   final.html 	new file:   images/1.jpeg 	new file:   images/2.jpeg 	new file:   images/3.jpg 	new file:   images/bg.jpeg 	new file:   images/heart.webp 	modified:   index.html 	new file:   mobile.js

--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,17 @@ body {
 			width: 150px;
 		}
 	}
+	@media (max-width: 768px) {
+		/* Styles for screens with a max width of 768px or less */
+	  }
+	  img {
+		max-width: 100%;
+		height: auto;
+	  }
+	  
 	/* CSS */
 .button-53 {
+	
 	z-index: 4;
 	background-color: #3DD1E7;
 	border: 0 solid #E5E7EB;
@@ -230,7 +239,7 @@ body {
 	transform: rotate(-2deg);
 	user-select: none;
 	margin-left: 40%;
-	margin-top: 10%;
+	
 	-webkit-user-select: none;
 	touch-action: manipulation;
   }
