--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ body {
     left: -4800px;
   }
 }
+@media (max-width: 768px) {
+		/* Styles for screens with a max width of 768px or less */
+	  }
+	  img {
+		max-width: 100%;
+		height: auto;
+	  }
+	  
 
 /* CSS */
 .button-49,
