--- a/css/styless.css
+++ b/css/styless.css
@@ -1,10 +1,21 @@
+
+
 body {
   overflow: hidden;
   font-family: "Roboto", serif;
   background-color: #000;    
   margin: 0;
-  
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
   background-repeat: no-repeat;
+}
+/* Apply some basic styling to the locked container */
+.scroll-lock {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .carousel {
